Main Fixed a bug that made the sign in form invisible, by adding styling in CSS

--- a/style.css
+++ b/style.css
@@ -549,3 +549,10 @@ button::before {
 button:hover::before {
   transform: translate(4px, -50%);
 }
+#log-in {
+  display: block;
+}
+
+#sign-up {
+  display: block;
+}
